fix: cors gateway 설정 주석처리, auth 직접 찌르게 수정